# qt_rocket

./: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  CustomView.cpp  CustomView.h  LICENSE  Qt_drawing.pro  README.md  RocketObject.cpp  RocketObject.h  RocketScene.cpp  RocketScene.h  RocketSceneFinal.cpp  RocketSceneFinal.h  Sibka.cpp  Sibka.h  error.txt  kakka  main.cpp
